// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testVueFile compatible 1`] = `
"import {
  computed,
  reactive,
  toRefs,
  ref,
  provide,
  inject,
  createComponent
} from '@vue/composition-api'

const symbol = Symbol('baz')

/**
 * My basic tag
 */
export default createComponent({
  model: {
    prop: 'checked',
    event: 'change'
  },
  props: {
    bar: null,
    qaq: null,
    cac: null,
    checked: { type: Boolean },
    /**
     * My foo
     */
    foo: { type: Boolean, default: false }
  },
  name: 'oao',
  setup(props, context) {
    /**
     * My count
     */
    const count = computed(() => {
      return context.$store.state.count
    })

    const { a } = (() => {
      const a = 'pa'

      return toRefs(
        reactive({
          a: a
        })
      )
    })()

    const anotherComponent = ref<HTMLElement>(null)

    provide('foa', 'foo')
    provide('bar', 'bar')

    const foai = inject<string>('foai')

    const bari = inject<string>('bari')

    const optional = inject<string>('optional', 'default')

    const bazi = inject<string>('bazi')

    /**
     * My msg
     */
    const msg = ref('Vetur means \\"Winter\\" in icelandic.') //foo

    /**
     * My greeting
     */
    const hello = () => {
      console.log(msg.value)
    }

    // TODO: Please remove unused return variable
    return {
      count,
      a,
      anotherComponent,
      foai,
      bari,
      optional,
      bazi,
      msg,
      hello
    }
  }
})
"
`;

exports[`testVueFile no compatible 1`] = `
"import { computed, reactive, toRefs, ref, provide, inject } from 'vue'

const symbol = Symbol('baz')

/**
 * My basic tag
 */
export default {
  model: {
    prop: 'checked',
    event: 'change'
  },
  props: {
    bar: null,
    qaq: null,
    cac: null,
    checked: { type: Boolean },
    /**
     * My foo
     */
    foo: { type: Boolean, default: false }
  },
  name: 'oao',
  setup(props, context) {
    /**
     * My count
     */
    const count = computed(() => {
      return context.$store.state.count
    })

    const { a } = (() => {
      const a = 'pa'

      return toRefs(
        reactive({
          a: a
        })
      )
    })()

    const anotherComponent = ref<HTMLElement>(null)

    provide('foa', 'foo')
    provide('bar', 'bar')

    const foai = inject<string>('foai')

    const bari = inject<string>('bari')

    const optional = inject<string>('optional', 'default')

    const bazi = inject<string>('bazi')

    /**
     * My msg
     */
    const msg = ref('Vetur means \\"Winter\\" in icelandic.') //foo

    /**
     * My greeting
     */
    const hello = () => {
      console.log(msg.value)
    }

    // TODO: Please remove unused return variable
    return {
      count,
      a,
      anotherComponent,
      foai,
      bari,
      optional,
      bazi,
      msg,
      hello
    }
  }
}
"
`;
